[package]
name = "vector3"
version = "0.0.3"
edition = "2021"
license = "MIT"
description = "A library for dealing with 3D mathematical vectors"
repository = "https://github.com/mooreolith/vector3"
keywords = ["maths", "vector"]
categories = ["mathematics"]

[dependencies]
js-sys = "0.3.69"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.92"
